--- a/BasicJavaFX/src/view/forest.fxml
+++ b/BasicJavaFX/src/view/forest.fxml
@@ -1,24 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="313.0" prefWidth="477.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.Controlador">
+<AnchorPane id="AnchorPane" prefHeight="313.0" prefWidth="477.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.Controlador">
   <children>
-    <ImageView id="application.css" fx:id="imageView" fitHeight="224.0" fitWidth="400.0" layoutX="29.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true" style="-fx-opacity: 100;">
-         <image>
-            <Image url="@img/blueforest.jpg" />
-         </image>
-    </ImageView>
-      <HBox layoutX="332.0" layoutY="257.0" spacing="25.0">
+      <GridPane alignment="CENTER" prefHeight="313.0" prefWidth="477.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="602.0" minWidth="0.0" prefWidth="551.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="248.0" minHeight="10.0" prefHeight="248.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="119.0" minHeight="10.0" prefHeight="63.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <Button fx:id="btnBlur" mnemonicParsing="false" onMouseClicked="#blur" text="blur" />
-            <Button fx:id="btnClip" mnemonicParsing="false" onMouseClicked="#clip" text="Clip" />
+          <ImageView id="application.css" fx:id="imageView" fitHeight="245.0" fitWidth="474.0" pickOnBounds="true" style="-fx-opacity: 100;">
+               <image>
+                  <Image url="@img/blueforest.jpg" />
+               </image>
+          </ImageView>
+            <HBox alignment="TOP_RIGHT" prefHeight="78.0" prefWidth="467.0" spacing="10.0" GridPane.rowIndex="1">
+               <children>
+                  <Button fx:id="btnBlur" mnemonicParsing="false" onMouseClicked="#blur" text="blur" />
+                  <Button fx:id="btnClip" mnemonicParsing="false" onMouseClicked="#clip" text="Clip" />
+                  <Button fx:id="btnGO" mnemonicParsing="false" onMouseClicked="#go" text="go" />
+               </children>
+               <GridPane.margin>
+                  <Insets right="30.0" top="10.0" />
+               </GridPane.margin>
+               <padding>
+                  <Insets top="20.0" />
+               </padding>
+            </HBox>
          </children>
-      </HBox>
+      </GridPane>
   </children>
 </AnchorPane>
